# AgentHub-Lite

./: .editorconfig  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps/api/: README.md
apps/api/agenthub_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: agents.py  auth.py  chat.py  model_providers.py  workspaces.py
apps/api/app/core/: config.py  database.py  deps.py  security.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: agent.py  auth.py  chat.py  model_provider.py  workspace.py
apps/api/app/services/: agent_service.py  auth_service.py  chat_service.py  model_provider_service.py
apps/api/tests/: test_health.py
apps/web/: README.md  eslint.config.js  index.html  package.json
apps/web/src/: App.tsx  mock.ts  styles.css
docs/: api.md  architecture.md  requirements.md  数据模型设计方案.md
infra/: docker-compose.yml  grant_agenthub_user.sql  postgres_schema.sql
