[project]
name = "agenthub-lite"
version = "0.1.0"
description = "Personal and team AI Agent platform backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.setuptools]
package-dir = {"" = "apps/api", "agent_runtime" = "packages/agent-runtime/agent_runtime"}

[tool.setuptools.packages.find]
where = ["apps/api", "packages/agent-runtime"]
include = ["app*", "agent_runtime*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx2>=0.28.0"
]
db = [
  "sqlmodel>=0.0.21"
]
integrations = [
  "httpx>=0.27.0"
]
lint = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages/agent-runtime/tests"]
pythonpath = ["apps/api", "packages/agent-runtime"]
